--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.0.2)
-project(baumer_pkg)
+project(baumer_ox_scanner)
 
 ## Compile as C++11, supported in ROS Kinetic and newer
 # add_compile_options(-std=c++11)
@@ -107,7 +107,7 @@ find_package(Boost 1.70 REQUIRED COMPONENTS system thread coroutine)
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
 #  INCLUDE_DIRS include
-#  LIBRARIES baumer_pkg
+#  LIBRARIES baumer_ox_scanner
 #  CATKIN_DEPENDS rospy
 #  DEPENDS system_lib
 )
@@ -132,7 +132,7 @@ include_directories(
 
 ## Declare a C++ library
 # add_library(${PROJECT_NAME}
-#   src/${PROJECT_NAME}/baumer_pkg.cpp
+#   src/${PROJECT_NAME}/baumer_ox_scanner.cpp
 # )
 
 ## Add cmake target dependencies of the library
@@ -143,9 +143,9 @@ include_directories(
 ## Declare a C++ executable
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
-# add_executable(${PROJECT_NAME}_node src/baumer_pkg_node.cpp)
+# add_executable(${PROJECT_NAME}_node src/baumer_ox_scanner_node.cpp)
 add_executable(oxapiexamples src/oxapiexamples.cpp)
-add_executable(ox_scanner src/ox_scanner.cpp)
+add_executable(scanner_pointcloud src/scanner_pointcloud.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -211,7 +211,7 @@ target_link_libraries(ox_scanner ${catkin_LIBRARIES} ${PROJECT_LINK_LIBS} ${CMAK
 #############
 
 ## Add gtest based cpp test target and link libraries
-# catkin_add_gtest(${PROJECT_NAME}-test test/test_baumer_pkg.cpp)
+# catkin_add_gtest(${PROJECT_NAME}-test test/test_baumer_ox_scanner.cpp)
 # if(TARGET ${PROJECT_NAME}-test)
 #   target_link_libraries(${PROJECT_NAME}-test ${PROJECT_NAME})
 # endif()
