--- a/package.xml
+++ b/package.xml
@@ -55,6 +55,7 @@
   <depend>roscpp</depend>
   <depend>sensor_msgs</depend>
   <depend>geometry_msgs</depend>
+  <depend>pcl_ros</depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
