--- a/package.xml
+++ b/package.xml
@@ -57,6 +57,8 @@
   <depend>geometry_msgs</depend>
   <depend>pcl_ros</depend>
 
+  <depend>tf</depend>
+
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
